# Lysofuzzing

./: README.md
lyso/: instrument.sh
lyso/llvmpass/GraphPass/: CFGReachabilityAnalysis.cc  CMakeLists.txt  GraphPass.cc  TypeAnalysis.cc
lyso/repo/: Makefile  afl-fuzz.c  config.h  distance_calculate.cpp
lyso/repo/llvm_mode/: afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c  afl-llvm-rt.o.c.bak
lyso/scripts/: distance_cfg.py  distance_cg.py
lyso/targets/libsndfile/: target_sndfile_fuzzer.txt
lyso/targets/libxml2/: target_xmllint.txt
lyso/targets/openssl/: target_x509.txt
lyso/targets/poppler/: target_pdfimages.txt  target_pdftoppm.txt
magma/fuzzers/fishfuzz/: preinstall.sh
magma/fuzzers/lyso/: run.sh
magma/fuzzers/lyso/llvmpass/: CMakeLists.txt  README.md
magma/fuzzers/lyso/llvmpass/GraphPass/: CFGReachabilityAnalysis.h  GraphPass.h  PointerAnalysis.cc  PointerAnalysis.h  TypeAnalysis.h  tags
magma/fuzzers/selectfuzz/: build.sh  preinstall.sh
magma/targets/libxml2/: build.sh
magma/targets/lua/: build.sh
magma/targets/openssl/: build.sh
magma_dgf/: README.md
magma_dgf/fuzzers/afl_d/: run.sh
magma_dgf/fuzzers/aflgo/: build.sh  instrument.sh  preinstall.sh  run.sh
magma_dgf/fuzzers/fishfuzz/: build.sh  fetch.sh  instrument.sh  run.sh  runonce.sh
magma_dgf/fuzzers/lyso/: build.sh  compile_fuzzer.sh  preinstall.sh
magma_dgf/fuzzers/selectfuzz/: instrument.sh
magma_dgf/fuzzers/titan/: build.sh  run.sh
magma_dgf/targets/libpng/: build.sh
magma_dgf/targets/libsndfile/: build.sh
magma_dgf/targets/libtiff/: build.sh
(+119 files in other folders)
